# kaggle-solutions

./: .gitignore  pyproject.toml
.claude/skills/collect-kaggle-solutions/: SKILL.md
.claude/skills/collect-kaggle-solutions/agents/: openai.yaml
.claude/skills/collect-kaggle-solutions/references/: article-format.md  content-selection.md  manifest-schema.md  output-layout.md  summary-format.md
.claude/skills/collect-kaggle-solutions/scripts/: pipeline.py  test_pipeline.py
.claude/skills/commit-assist/: SKILL.md
.claude/skills/commit-assist/references/: conventional-commits.md
.codex/skills/: collect-kaggle-solutions
.codex/skills/collect-kaggle-solutions/: SKILL.md
.codex/skills/collect-kaggle-solutions/agents/: openai.yaml
.codex/skills/collect-kaggle-solutions/references/: content-selection.md  manifest-schema.md  summary-format.md
.codex/skills/collect-kaggle-solutions/scripts/: pipeline.py
.codex/skills/commit-assist/: SKILL.md
.codex/skills/commit-assist/agents/: openai.yaml
outputs/um-game-playing-strength-of-mcts-variants/: summary.md
outputs/vesuvius-challenge-surface-detection/: summary.md
solutions/202412-um-game-playing-strength-of-mcts-variants/: article.md
solutions/202510-rsna-intracranial-aneurysm-detection/: article.md  summary.md
solutions/202601-csiro-biomass/: article.md
solutions/202602-vesuvius-challenge-surface-detection/: article.md
solutions/202604-recodai-luc-scientific-image-forgery-detection/: article.md
solutions/202606-birdclef-2026/: article.md  summary.md
(+1 files in other folders)
